@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.10
 
+	- The scheduler now protects against DNS rebinding attacks on
+	  localhost.
 	- SECURITY: The PNG image reading code did not validate the
 	  image size properly, leading to a potential buffer overflow
 	  (STR #2974)
